<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010 Janos Gyerik
    
    This file is part of BluetoothViewer.

    BluetoothViewer is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BluetoothViewer is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with BluetoothViewer.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

	<ImageButton
        android:id="@+id/toolbar_btn_connect"
        style="@style/toolbarButton"
        android:src="@drawable/toolbar_btn_connect"
        android:visibility="gone" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbarbg"
        android:layout_alignParentBottom="true"/>

    <ImageButton
        android:id="@+id/toolbar_btn_disconnect"
        android:src="@drawable/toolbar_btn_disconnect"
        android:visibility="gone" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_alignParentBottom="true"/>
        
	<android.widget.VerticalSeekBar
    	android:id="@+id/ThrustBar"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_margin="25dp"
		android:visibility="gone"
		android:layout_alignParentLeft="true"/>
	
    <android.widget.VerticalSeekBar
    	android:id="@+id/YawBar"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_margin="25dp"
		android:visibility="gone"
		android:layout_alignParentRight="true"/>
    
    <TextView
        android:id="@+id/ThrustLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/ThrustBar"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="-22dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/ThrustLabel" />
        
    <TextView
        android:id="@+id/YawLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/YawBar"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-22dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/YawLabel" />
    
    <LinearLayout 
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
		        android:id="@+id/A_Label"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="A" />
            <TextView
		        android:id="@+id/A_Text"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="@string/A_Text" />
            <Button
		        android:id="@+id/A_Plus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="+"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
            <Button
		        android:id="@+id/A_Minus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="-"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
		        android:id="@+id/B_Label"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="B" />
            <TextView
		        android:id="@+id/B_Text"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="@string/B_Text" />
            <Button
		        android:id="@+id/B_Plus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="+"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
            <Button
		        android:id="@+id/B_Minus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="-"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
		        android:id="@+id/C_Label"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="C" />
            <TextView
		        android:id="@+id/C_Text"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="@string/C_Text" />
            <Button
		        android:id="@+id/C_Plus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="+"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
            <Button
		        android:id="@+id/C_Minus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="-"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
		        android:id="@+id/D_Label"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="D" />
            <TextView
		        android:id="@+id/D_Text"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="@string/D_Text" />
            <Button
		        android:id="@+id/D_Plus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="+"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
            <Button
		        android:id="@+id/D_Minus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="-"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
		        android:id="@+id/p_Label"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="p" />
            <TextView
		        android:id="@+id/p_Text"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="@string/p_Text" />
            <Button
		        android:id="@+id/p_Plus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="+"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
            <Button
		        android:id="@+id/p_Minus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="-"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
		        android:id="@+id/i_Label"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="i" />
            <TextView
		        android:id="@+id/i_Text"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="@string/i_Text" />
            <Button
		        android:id="@+id/i_Plus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="+"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
            <Button
		        android:id="@+id/i_Minus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="-"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
		        android:id="@+id/d_Label"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="d" />
            <TextView
		        android:id="@+id/d_Text"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:text="@string/d_Text" />
            <Button
		        android:id="@+id/d_Plus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="+"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
            <Button
		        android:id="@+id/d_Minus"
		        android:visibility="gone" 
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:text="-"
		        android:padding="10dp"
		        android:layout_margin="2dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
	                   
		    <Button
		        android:id="@+id/btn_Assist"
		        android:visibility="gone" 
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="FlightAssit"
		        android:padding="10dp"
		        android:layout_margin="10dp"/>
		        
		    <Button
		        android:id="@+id/btn_Manual"
		        android:visibility="gone" 
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="Manual"
		        android:padding="10dp"
		        android:layout_margin="10dp"/>
		    
		    <Button
		        android:id="@+id/btn_Launch"
		        android:visibility="gone" 
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="Launch"
		        android:padding="10dp"
		        android:layout_margin="10dp"/>
		           
		    <Button
		        android:id="@+id/btn_Control"
		        android:visibility="gone" 
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="Take Control"
		        android:padding="10dp"
		        android:layout_margin="10dp"/>
		    
		    <Button
		        android:id="@+id/btn_Land"
		        android:visibility="gone" 
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="Land"
		        android:padding="10dp"
		        android:layout_margin="10dp"/>
		    
		    <Button
		        android:id="@+id/btn_Ground"
		        android:visibility="gone" 
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="Turn Off"
		        android:padding="10dp"
		        android:layout_margin="10dp"/>
		    
		    </LinearLayout>
	    
    </LinearLayout>

</RelativeLayout>